Fix player overview sometimes closing due to z-index issues

--- a/style/component/AppInfo.scss
+++ b/style/component/AppInfo.scss
@@ -62,6 +62,10 @@
 			width: 65px !important;
 		}
 	}
+	
+	&-logo-container, &-title {
+		z-index: 1;
+	}
 
 	&-api-down-warning {
 		.warning-text {
