--- a/style/component/PlayerOverview.scss
+++ b/style/component/PlayerOverview.scss
@@ -48,6 +48,7 @@
 		height: fit-content;
 		align-self: center;
 		text-align: center;
+		z-index: 1;
 
 		&-username,
 		&-code {
@@ -90,7 +91,6 @@
 		padding-bottom: 10px;
 		padding-top: calc(var(--nav-height) + 10px);
 		box-sizing: border-box;
-		z-index: -1;
 		grid-template-columns: 1fr auto 1fr;
 		height: fit-content;
 		gap: 150px;
